# pii-detector-esic

./: .gitignore  LICENSE  README.md  avaliar_nao_publico.py  nao_publico.py  pyproject.toml  requirements.txt
data/: gabarito.csv  nome_weights.csv
detectors/: cpf_detection.py  email_detection.py  nome_detection.py  rg_detection.py  telefone_detection.py  utils_io.py
scripts/: cpf_detection.py  email_detection.py  nome_detection.py  rg_detection.py  telefone_detection.py
src/pii_detector/: __init__.py  cache.py  cli.py  detection.py  fragment.py  io_utils.py  llm.py
tests/: gerar_amostra.py  test_detection.py  test_detectores.py
