[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-detector"
version = "0.1.0"
description = "Classificador de dados pessoais para pedidos de acesso à informação."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
